--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.8.2",
     "react-slick": "^0.29.0",
     "sass": "^1.58.3",
