--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "framer-motion": "^10.0.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-preloaders": "^3.0.3",
     "react-router-dom": "^6.8.2",
+    "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.29.0",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
