--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.0.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.8.2",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
   },
